Bug 387873 - can no longer drag/drop a message from message list to favorites
Summary: can no longer drag/drop a message from message list to favorites
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-13 15:24 UTC by Martin Koller
Modified: 2017-12-19 22:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2017-12-13 15:24:05 UTC
With current git version I can no longer drag/drop a mail from the message list onto a folder shown in the favorites.
This worked some time ago.
Comment 1 David Faure 2017-12-19 22:12:00 UTC
Git commit ace9cfb46008e4fcd2b973111fbc508110bbd9c9 by David Faure.
Committed on 19/12/2017 at 22:11.
Pushed by dfaure into branch 'master'.

Fix dropping of emails onto favorites

Summary:
and dropping a collection to define a new favorite.

Test Plan:
Tested all three features, reordering, adding, and dropping a mail.

Two issues left:
- adding a new favourite at a specific position (patch pending
      for akonadi's favoritecollectionsmodel)
- the "+" when moving to reorder shouldn't appear, should be MoveAction only,
      don't know if that's possible here though.

Reviewers: dvratil, mlaurent, mkoller

Reviewed By: dvratil

Subscribers: #kde_pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D9403

M  +0    -10   src/folder/favoritecollectionorderproxymodel.cpp
M  +0    -2    src/folder/favoritecollectionorderproxymodel.h
M  +47   -9    src/widgets/favoritecollectionwidget.cpp
M  +2    -0    src/widgets/favoritecollectionwidget.h

https://commits.kde.org/mailcommon/ace9cfb46008e4fcd2b973111fbc508110bbd9c9