Fix dropping of emails onto favorites

Summary:
and dropping a collection to define a new favorite.

BUG: 387873

Test Plan:
Tested all three features, reordering, adding, and dropping a mail.

Two issues left:
- adding a new favourite at a specific position (patch pending
      for akonadi's favoritecollectionsmodel)
- the "+" when moving to reorder shouldn't appear, should be MoveAction only,
      don't know if that's possible here though.

Reviewers: dvratil, mlaurent, mkoller

Reviewed By: dvratil

Subscribers: #kde_pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D9403